Fix scrollbar fill

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --accent-color: #ff4d00;
   --accent-faded: #ff4d0022;
   --header-height: 100px;
-  --navbar-height: 53px;
+  --navbar-height: 51px;
   --footer-height: 74px;
 }
 
